--- a/wasm-game-of-life/Cargo.toml
+++ b/wasm-game-of-life/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 wasm-bindgen = "0.2.87"
+web-sys = { version = "0.3.4", features = ["CanvasRenderingContext2d"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.64"
