--- a/wasm-game-of-life/Cargo.toml
+++ b/wasm-game-of-life/Cargo.toml
@@ -9,11 +9,19 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-wasm-bindgen = "0.2.87"
-web-sys = { version = "0.3.4", features = ["CanvasRenderingContext2d"] }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
+itertools = "0.11.0"
 js-sys = "0.3.64"
+wasm-bindgen = "0.2.87"
+web-sys = { version = "0.3.4", features = [
+    "console",
+    "CanvasRenderingContext2d",
+    "WebGlBuffer",
+    "WebGlVertexArrayObject",
+    "WebGl2RenderingContext",
+    "WebGlProgram",
+    "WebGlShader",
+    "WebGlUniformLocation",
+] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 rand = "0.8.5"
