--- a/wasm-game-of-life/Cargo.toml
+++ b/wasm-game-of-life/Cargo.toml
@@ -20,6 +20,7 @@ web-sys = { version = "0.3.4", features = [
     "WebGl2RenderingContext",
     "WebGlProgram",
     "WebGlShader",
+    "WebGlTexture",
     "WebGlUniformLocation",
 ] }
 
